<?xml version="1.0"?>
<package format="3">
  <name>ur3e_interface_msgs</name>
  <version>0.0.1</version>
  <description>Interfaces para mensagens personalizadas de controle de pessoas e distâncias no ambiente UR3e.</description>
  <maintainer email="antonione@gmail.com">anonione</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
